--- a/stylePopUp.css
+++ b/stylePopUp.css
@@ -25,7 +25,18 @@
     font-size: 20px;
     font-weight: bold;
 }
-
+#choice1{
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+}
+#choice2{
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+}
+#close{
+    background-color: #dd0f0f;
+    color: #ffffff;
+}
 .dialogue-choice {
     display: block;
     width: 100%;
@@ -61,7 +72,7 @@
     to { opacity: 1; transform: translate(-50%, -50%); }
 }
 
-#score {
+/* #score {
     position: fixed;
     top: 10px;
     right: 10px;
@@ -73,7 +84,7 @@
     font-weight: bold;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     font-family: Arial, sans-serif;
-}
+} */
 
 #feedback-message {
     position: fixed;
